Small fixes + code readability